# backend/src/main/kotlin/io/github/projektalmanac/comunidades/generated/api/UsuariosApi.kt
@@ -6,7 +6,6 @@
 package io.github.projektalmanac.comunidades.generated.api
 
 import io.github.projektalmanac.comunidades.generated.dto.CreacionUsuarioDto
-import io.github.projektalmanac.comunidades.generated.dto.IdUsuarioDto
 import io.github.projektalmanac.comunidades.generated.dto.ListaComunidadesDto
 import io.github.projektalmanac.comunidades.generated.dto.UsuarioCreadoDto
 import io.swagger.v3.oas.annotations.*
@@ -75,17 +74,17 @@ interface UsuariosApi {
 
     @Operation(
         summary = "Recuperar ID",
-        operationId = "getId",
+        operationId = "getMe",
         description = """Recupera el ID del usuario basado en la información de su JWT""",
         responses = [
-            ApiResponse(responseCode = "200", description = "OK", content = [Content(schema = Schema(implementation = IdUsuarioDto::class))])
+            ApiResponse(responseCode = "200", description = "OK", content = [Content(schema = Schema(implementation = UsuarioCreadoDto::class))])
         ],
         security = [ SecurityRequirement(name = "jwt") ]
     )
     @RequestMapping(
             method = [RequestMethod.GET],
-            value = ["/api/usuarios/id"],
+            value = ["/api/usuarios/me"],
             produces = ["application/json"]
     )
-    fun getId(): ResponseEntity<IdUsuarioDto>
+    fun getMe(): ResponseEntity<UsuarioCreadoDto>
 }
